--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-masonry-component": "^6.2.1",
+    "react-recaptcha": "^2.3.10",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0",
@@ -43,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "localhost:5000"
+  "proxy": "https://localhost:5000"
 }
