--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Photography Catalog Site",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "dotenv": "^8.0.0",
