--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "dotenv": "^8.2.0",
     "emailjs-com": "^2.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
